# job-hunter

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  BOOTSTRAP_DEDUP_PLAN.md  BOT_MULTIUSER_PLAN.md  CLAUDE.md  COVER_LETTER_REWORK_PLAN.md  DEPLOY.md  DEPLOY_V2.md  DUPLICATE_INVESTIGATION.md  Dockerfile  EXPIRED_PLAN.md  FIXES.md  GDPR_CLAUSE_PLAN.md  GDRIVE_PLAN.md  GSHEETS_PLAN.md  HUNTER_PLAN.md  LICENSE  PHASE3_TO_SEND_GREP.md  PLAN.md  PRACUJ_RATE_LIMIT_FIX.md  PROJECT_REVIEW_AND_REFACTOR_PLAN.md  README.md  SAAS_PLAN.md  WEBSITE_PLAN.md  apply_agent.py  docker-compose.yml  generate_docs.py  hunter.py  llm_client.py  pyproject.toml  requirements.txt  smoke_test_cl.py  sonar-project.properties  start_hunter.bat  telegram_channels.json  tracker.backup.20260412_161716.xlsx
.claude/: ABOUT_ME_AGENT_PLAN.md  ATS_AGGREGATOR_PLAN.md  AUTOMATION_PLAN.md  COVER_LETTER_UPDATE_PLAN.md  GMAIL_ENRICHMENT_PLAN.md  JOB_SOURCES_ROADMAP.md  NEXT_SOURCE_REMOTEOK_PLAN.md  NEXT_SOURCE_REMOTIVE_PLAN.md  PLAYWRIGHT_PLAN.md  settings.local.json
.claude/agents/: scraper-health-checker.md
.claude/commands/: add-source.md  apply.md  batch.md
.claude/hooks/: block_protected.py  syntax_check.py
.github/workflows/: deploy.yml
docs/: AGENT_LOG.md  ARCHITECTURE.md  ATS_VERDICT_PHASE2_PLAN.md  CV_JUDGE_PLAN.md  DEEPSEEK_PROVIDER_PLAN.md  DOOMED_GATE_CALIBRATION.md  DOOMED_GATE_PASTE_CALIBRATION.md  DOOMED_GATE_PASTE_PLAN.md  DOOMED_GATE_PLAN.md  DUAL_SHADOW_PARITY_PLAN.md  HUNT_QUEUE_AND_DELIVERY_PLAN.md  LINKEDIN_POSTS_SOURCE_PLAN.md  LLM_COST_REDUCTION_PLAN.md  LLM_OUTAGE_RESILIENCE_PLAN.md  PROJECT_ANALYSIS_2026_05.md  PROJECT_REVIEW_2026-06.md  PUBLIC_RELEASE_CHECKLIST.md  QUALITY_ROADMAP.md  REFACTORING_PLAN.md  RELIABILITY_FIXES_PLAN.md  SCOUT_REPO_SPLIT_PLAN.md  TELEGRAM_CHANNELS_SOURCE_PLAN.md  VERDICT_REFINE_PLAN.md  WEB_APP_PLAN.md  plan_parallel_expired_check.md  refactor_phase1_cleanup.md
docs/archive/: GDRIVE_TRACKING_PLAN.md  README.md
docs/new-sources/: OVERVIEW.md  QUEUE-1-easy.md  QUEUE-2-medium.md  QUEUE-3-hard.md
docs/quality/: 01-verdict-data-decision.md  02-dependency-lockfile-deploy-pinning.md  03-best-effort-degradation-alerts.md  04-coverage-and-golden-e2e.md  05-unify-apply-pipeline.md  06-static-gates-mypy-sonar.md  07-public-repo-prep.md  08-multi-user-configurability.md  09-multi-track-react.md
docs/review-2026-07/: 01-what-is-done-well.md  02-next-steps.md  README.md  path-A-feedback-loop.md  path-B-cv-quality.md  path-C-tech-debt.md  path-D-ops.md  path-E-expansion.md
hunter/: __main__.py  about_me_agent.py  app.py  apply_api.py  apply_cli.py  apply_shared.py  ats_checker.py  ats_companies.json  ats_pdf_roundtrip.py  best_effort.py  claim_judge.py  config.py  contact_extract.py  content_qa.py  cost_writer.py  date_normalize.py  db.py  delivery.py  dual_apply.py  email_response_checker.py  expired_check.py  expired_marker.py  expired_to_send_check.py  export_xlsx.py  filter_config.py  filters.py  funnel.py  gdrive_client.py  gdrive_sync.py  gmail_client.py  gmail_enricher.py  gmail_parsers.py  gmail_report.py  gsheets_client.py  gsheets_sync.py  lang_guard.py  llm_cost.py  llm_outage.py  llm_profiles.py  logging_setup.py  (+21 more)
hunter/ats/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py  recruitee.py  workable.py
hunter/bot/: __init__.py  apply_runner.py  formatters.py  keyboards.py  notifications.py  paste.py  state.py
hunter/commands/: __init__.py  about_me.py  check_expired.py  check_responses.py  debug_url.py  dual.py  export.py  force.py  funnel.py  gdrive.py  google.py  gsheets.py  health.py  hunt.py  llm.py  (+12 more)
job_fetch/: __init__.py  arbeitnow.py  ats_ashby.py  ats_greenhouse.py  ats_lever.py  ats_recruitee.py  ats_workable.py  bulldogjob.py  fourdayweek.py  html_fallback.py  inhire.py  jobleads.py  justjoin.py  linkedin.py  linkedin_parse.py  nofluffjobs.py  pracuj.py  remoteleaf.py  remoteok.py  remotive.py  solidjobs.py  theprotocol.py  weworkremotely.py
linkedin_scout/: README.md  browser.py  config.py  heuristics.py  location_gate.py  notify.py  parser.py  queue_writer.py  run.py  seen_store.py  state.py  telegram_relay.py
prompts/: README.md  base_cv_ai.md  base_cv_angular.example.md  base_cv_angular.md  base_cv_fullstack_angular_nest.md  base_cv_fullstack_nest.md  base_cv_fullstack_react_next.md  base_cv_react.md  candidate_profile.example.md  candidate_profile.md  generation_rules.md  judge_rules.md  system_prompt.md
tests/: conftest.py  test_apply_agent_generate_cmd.py  test_apply_api.py  test_apply_cli.py  test_apply_dispatcher.py  test_apply_service.py  test_apply_shared.py  test_apply_validation.py  test_ats_aggregator_matches_url.py  test_ats_ashby_parse.py  test_ats_greenhouse_parse.py  test_ats_lever_job_text.py  test_ats_lever_parse.py  test_ats_pdf_roundtrip.py  test_ats_recruitee_parse.py  test_ats_workable_job_text.py  test_ats_workable_parse.py  test_base_cv_detection.py  test_base_source_fetch_text.py  test_best_effort.py  test_bootstrap_dedup.py  test_builtin_parse.py  test_claim_judge.py  test_config_unification.py  test_config_validation.py  test_contact_extract.py  test_content_qa.py  test_cost_writer.py  test_cover_letter_banlist.py  test_daily_summary.py  test_date_normalize.py  test_db.py  test_dedup_drive_folders.py  test_dedup_marketing_tail.py  test_dedup_sheet.py  test_doomed_gate.py  test_doomed_gate_wiring.py  test_dual_apply.py  test_email_response_checker.py  test_expired_check.py  (+123 more)
tools/: ats_pdf_roundtrip.py  backup_tracker.py  check_expired_to_send.py  dedup_drive_folders.py  dedup_sheet.py  dedupe_tracker.py  fix_pracuj_urls.py  generate_sample_classic_cover.py  gmail_auth.py  gsheets_auth.py  judge_stats.py  linkedin_login.py  llm_cost_report.py  migrate_applications.py  normalize_sent.py  preview_apply.py  preview_judge.py  regen_covers_v2_last3.py  repair_false_expired.py  repair_tracker.py  reuse_calibrate.py  screen_calibrate.py  start_hunter.bat  stats_sheet.py  sync_costs.py  sync_verdicts.py  telegram_user_login.py  test_gmail.py  verdict_funnel_corr.py  verdict_noise.py
(+92 files in other folders)
