[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-hunter"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    # HTTP / scraping
    "requests",
    "cloudscraper",
    "beautifulsoup4",
    # Config / data
    "python-dotenv",
    "openpyxl",
    "python-docx",
    "pytz",
    # Telegram bot
    "python-telegram-bot[job-queue]",
    # LLM
    "anthropic",
    # openai SDK — used directly for the OpenAI provider AND as the client for
    # the OpenRouter gateway (DeepSeek R1/V3 etc.). Required for non-anthropic
    # profiles.
    "openai",
    # Google APIs
    "google-api-python-client==2.131.0",
    "google-auth==2.29.0",
    "google-auth-oauthlib==1.2.0",
    "google-auth-httplib2==0.2.0",
    # ATS scoring
    "scikit-learn",
    "pypdf",
]

[project.optional-dependencies]
# Headless browser for JS-heavy / SPA job boards (inhire.io etc.)
browser = ["playwright"]
# linkedin_scout/ only (owner's desktop, not deployed with the bot): sends
# /scoutfound via the owner's own Telegram user session (MTProto), since a
# bot's own Bot-API messages never come back to it as an incoming update.
scout = ["telethon"]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.scripts]
hunter = "hunter.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hunter*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
# Gate covers the whole repo: hunter/ + entry scripts + tests/ + tools/.

[tool.ruff.lint]
# Base: pyflakes F + focused pycodestyle E subset + warnings.
# Expanded 2026-07-12: B (bugbear — real bug patterns), C4 (comprehensions),
# SIM (simplifications), S (flake8-bandit security).
select = ["E4", "E7", "E9", "F", "W", "B", "C4", "SIM", "S"]
# E402: many modules import after a sys.path tweak or behind a runtime guard.
# E741: a few short loop vars (l/I/O) that are clear enough in context.
# S110/S112 + SIM105: try/except-pass/continue is this codebase's deliberate
#   best-effort contract (Sheets/Drive/Telegram/shadow must never break an apply).
# S311: random is used for scraper jitter/skip-chance, never cryptography.
# S603/S607: subprocess runs fixed argv lists (apply_agent, LibreOffice, git) —
#   no shell=True anywhere; these rules flag every subprocess call as "audit me".
ignore = ["E402", "E741", "S110", "S112", "SIM105", "S311", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
# S101: pytest asserts. SIM117: nested `with patch(...)` stacks are the local
# test idiom. S608: f-string SQL over hardcoded test fixtures, no user input.
# S108: literal "/tmp/..." strings used as fake folder values in fixtures.
"tests/*" = ["S101", "SIM117", "S608", "S108"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["tests/", "tools/"]
